# AFSIM_MCP

./: .gitignore  CAPABILITY_ASSESSMENT.md  LICENSE  MODEL_WORKFLOW_PROMPT.md  README.md  configure_mcp.py  pyproject.toml  stdio.py
afsim_mcp/: __init__.py  afsim_backend.py  entity_manager.py  models.py  nl_generator.py  results_handler.py  scenario_manager.py  server.py  simulation_controller.py
core/: __init__.py  analysis.py  assets.py  generation.py  planning.py  results.py  runtime.py  scenario_ops.py  server.py  showcase.py  task_planning.py
scenarios/: demo.afsim
tests/: test_afsim_backend.py  test_entity_manager.py  test_nl_generator.py  test_results_handler.py  test_scenario_manager.py  test_simulation_controller.py
tools/: __init__.py  backend_tools.py  demo_tools.py  entity_tools.py  scenario_tools.py  simulation_tools.py
transport/: stdio.py
