[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afsim-mcp"
version = "0.1.0"
description = "MCP server for the AFSIM simulation framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
afsim-mcp = "afsim_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["afsim_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
